--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
+    <script src="src/bootstrap-input-spinner.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sistema de Ventas</title>
   </head>
